[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://EnemySM.gd" type="Script" id=2]
[ext_resource path="res://enemy.png" type="Texture" id=3]

[node name="Enemy" type="Area2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -8, 0, 0, -4, 8, 0, 0, 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 4.17233e-07, -2.38419e-07 )
scale = Vector2( 0.8, 0.4 )

[node name="EnemySM" type="Node" parent="."]
script = ExtResource( 2 )

[node name="ShotRotator" type="Node2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="ExplodeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
